# ai-algos-rs

./: .pre-commit-config.yaml  Cargo.toml
doc/: mcts.md
scripts/: build_nn.py  builder.py
src/: lib.rs
src/agents/: egreedy.rs  mod.rs  random.rs  stochastic.rs
src/agents/mcts/: algo.rs  analysis.rs  backpropagation.rs  nodes.rs  uct_value.rs
src/agents/minimax/: negamax.rs  state.rs
src/agents/neural/: actions.rs  agent.rs  agents.rs  fieldset.rs  fieldsets.rs  learning_metrics.rs  memory.rs  mod.rs  network.rs  networks.rs  replay_buffer.rs
src/agents/policy_neural/: agent.rs  mod.rs
src/algos/: interface.rs  mod.rs
src/algos/mcts/: algo.rs  analysis.rs  backpropagation.rs  edges.rs  expansion.rs  mod.rs  nodes.rs  selection.rs  simulation.rs  uct_value.rs
src/algos/minimax/: mod.rs  negamax.rs  state.rs
src/algos/neural/: agent.rs  memory.rs  mod.rs  network.rs  probas.rs
src/algos/neural_network/: algo.rs  mod.rs
src/algos/proba_learning/: algo.rs  mod.rs
src/interface/: mod.rs  permutable.rs  permutation_iterator.rs  ply.rs  ply_iterator.rs  ruleset.rs  state.rs  status.rs  symmetry_iterator.rs
src/interface/ai/: agents.rs  game_log.rs  mod.rs  ply_considerations.rs  policies.rs  policy.rs  policy_logs.rs  qvalue.rs
src/interface/rulesets/: mod.rs  ply.rs  ruleset.rs  state.rs  (+1 more)
src/playground/: evaluating.rs  mod.rs  playing.rs  training.rs
src/policies/: mod.rs
src/rulesets/: interface.rs  mod.rs
src/tests/: empty_state.rs  mod.rs
src/tools/: learning.rs  mod.rs  playing.rs  ply_iterator.rs  testing.rs
src/utils/: mod.rs
(+147 files in other folders)
