[package]
name = "ai-algos"
version = "0.1.0"
authors = ["ktran"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = {version = "*", features = ["experimental_training"]}
rand = "*"
pre-commit = "*"
itertools = "*"
auto_ops = "*"
petgraph = "*"
more-asserts = "*"

[package.metadata.precommit]
fmt = "cargo fmt -- --check 2>&1"
test = "cargo test 2>&1"
