[package]
name = "ai-algos"
version = "0.1.0"
authors = ["ktran"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = {version = "*", features = ["experimental_training"]}
rand = "*"
itertools = "*"
auto_ops = "*"
petgraph = "*"
more-asserts = "*"
